--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,8 @@ cover/
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
+# sync database 
+# db.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
