--- a/.gitignore
+++ b/.gitignore
@@ -212,7 +212,5 @@ marimo/_lsp/
 __marimo__/
 
 # SQLite DB
-*.sqlite
-*.sqlite3
-# Ignore project-local sqlite DB
-server/db.sqlite3
+# *.sqlite
+# *.sqlite3
