--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^19.2.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
